--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.7.x",
+    "angular-cookies": "1.7.x",
     "angular-route": "^1.7.x",
     "bootstrap": "^4.3.1",
     "jquery": "3.4.1",
-    "popper.js": "^1.14.7",
-    "angular-cookies": "1.7.x"
+    "popper.js": "^1.14.7"
   },
   "devDependencies": {
     "angular-mocks": "^1.7.x",
