--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "author": "Jesus Rodriguez",
   "license": "MIT",
   "dependencies": {
-    "angular": "^1.7.0",
+    "angular": "^1.7.8",
     "@uirouter/angularjs": "1.0.22",
     "angular-loading-bar": "^0.9.0",
-    "angular-cookies": "1.7.0",
+    "angular-cookies": "1.7.8",
     "angular-messages": "1.7.8",
+    "angular-sanitize": "1.7.8",
+    "angular-animate": "1.7.8",
     "jquery": "^3.4.1",
     "popper.js": "1.14.3",
     "bootstrap": "4.3.1"
