--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "angular-loading-bar": "^0.9.0",
     "angular-cookies": "1.7.8",
     "angular-messages": "1.7.8",
+    "ngstorage": "0.3.11",
     "jquery": "^3.4.1",
     "popper.js": "1.14.3",
     "bootstrap": "4.3.1"
