--- a/package.json
+++ b/package.json
@@ -12,23 +12,29 @@
   "author": "Jesus Rodriguez",
   "license": "MIT",
   "dependencies": {
-    "angular": "^1.7.8",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@uirouter/angularjs": "1.0.22",
-    "angular-loading-bar": "^0.9.0",
+    "angular": "^1.7.8",
     "angular-cookies": "1.7.8",
+    "angular-loading-bar": "^0.9.0",
     "angular-messages": "1.7.8",
-    "ngstorage": "0.3.11",
+    "babel-minify-webpack-plugin": "0.3.1",
+    "bootstrap": "4.3.1",
     "jquery": "^3.4.1",
-    "popper.js": "1.14.3",
-    "bootstrap": "4.3.1"
+    "ngstorage": "0.3.11",
+    "popper.js": "1.14.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "7.5.5",
     "ajv": "^6.4.0",
     "angular-mocks": "^1.7.0",
     "autoprefixer": "^8.4.1",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-preset-es2015": "^6.1.18",
+    "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^2.0.2",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
