--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "bootstrap": "4.3.1",
     "jquery": "^3.4.1",
     "ngstorage": "0.3.11",
-    "popper.js": "1.14.3"
+    "popper.js": "1.14.3",
+    "angular-translate": "^2.18.1",
+    "angular-translate-loader-static-files": "^2.18.1"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
