--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "ngstorage": "0.3.11",
     "popper.js": "1.14.3",
     "angular-translate": "^2.18.1",
-    "angular-translate-loader-static-files": "^2.18.1"
+    "angular-translate-loader-static-files": "^2.18.1",
+    "angular-dialog-service": "5.3.0",
+    "angular-ui-bootstrap": "^2.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
