--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "angular": "^1.7.8",
     "angular-cookies": "1.7.8",
     "angular-loading-bar": "^0.9.0",
-    "angular-messages": "1.7.8",
     "babel-minify-webpack-plugin": "0.3.1",
     "bootstrap": "4.3.1",
     "jquery": "^3.4.1",
@@ -29,8 +28,8 @@
     "popper.js": "1.14.3",
     "angular-translate": "^2.18.1",
     "angular-translate-loader-static-files": "^2.18.1",
-    "angular-dialog-service": "5.3.0",
-    "angular-ui-bootstrap": "^2.5.6"
+    "angularjs-datepicker": "2.1.23",
+    "angular-ui-validate": "1.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
