--- a/package.json
+++ b/package.json
@@ -29,7 +29,12 @@
     "angular-translate": "^2.18.1",
     "angular-translate-loader-static-files": "^2.18.1",
     "angularjs-datepicker": "2.1.23",
-    "angular-ui-validate": "1.2.3"
+    "angular-ui-validate": "1.2.3",
+    "angular-ui-sortable": "0.19.0",
+    "angular-ui-sortable-loader": "0.1.0",
+    "angular-ui-bootstrap": "^2.5.6",
+    "angular-animate": "^1.7.8",
+    "angular-sanitize": "^1.7.8"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
