--- a/certificates-back/package.json
+++ b/certificates-back/package.json
@@ -2,9 +2,10 @@
   "name": "my-message-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js -exec @babel/node -e js "
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +16,14 @@
     "jwt-simple": "^0.5.6",
     "moment": "^2.24.0",
     "mongodb": "^3.3.2",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "nodemon": "^1.19.2",
+    "http-status-codes": "^1.3.2",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.6.0",
+    "@babel/preset-env": "^7.6.0",
+    "@babel/node": "^7.6.1"
   }
 }
