--- a/certificates/package.json
+++ b/certificates/package.json
@@ -21,6 +21,7 @@
     "angular": "^1.7.8",
     "angular-cookies": "1.7.8",
     "angular-loading-bar": "^0.9.0",
+    "angular-messages": "^1.7.8",
     "angular-touch": "^1.7.8",
     "angular-translate": "^2.18.1",
     "angular-translate-loader-static-files": "^2.18.1",
