--- a/certificates-back/package.json
+++ b/certificates-back/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^5.7.1",
     "nodemon": "^1.19.2",
     "http-status-codes": "^1.3.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "morgan": "^1.9.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.0",
